<resources>
    <string name="app_name">Survey Calculator</string>
    <string name="title_about">About</string>
    <string name="title_settings">Settings</string>
    <string name="calculatorIds">Calculator</string>
    <string name="settings">Setting</string>
    <string name="change_language">Change Language</string>
    <string name="change_theme">Change Theme</string>
    <string name="title_activity_basicalculator">Basic Calculator</string>
    <string name="title_land">Land Calculation</string>
    <string name="title_gold">Gold Calculation</string>
    <string name="title_timber">Timber Calculation</string>
    <string name="title_rod">Rod Calculation</string>
    <string name="title_soil">Soil Calculation</string>
    <string name="title_genarel">Survey Tools</string>
    <string name="oblong">Ractangular</string>
    <string name="square">Square</string>
    <string name="rhombus">Rhombus</string>
    <string name="parellelogram">Parallelogram</string>
    <string name="trapezium">Trapezium</string>
    <string name="equiangular">Equiangular</string>
    <string name="cosine">Cosine Rule</string>
    <string name="heron">Heron"'"s Formula</string>
    <string name="rtriangle">Right triangle</string>
    <string name="parabola">Parabola</string>
    <string name="ccircle">SemiEllipse</string>
    <string name="circle">Circle</string>
    <string name="ellipse">Ellipse</string>
    <string name="ldistribution">Land Distribution</string>
    <string name="kcalculator">Khatian Calculator</string>
    <string name="uchange">Unit Change</string>
    <string name="mtriangles">Multiple Triangles</string>
    <string name="alcalculation">Accurate Land Calculation</string>
    <string name="instraction">Please ! Give all information in feet</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="decemol">Cent/Decimal</string>
    <string name="squarefeet">Square Feet</string>
    <string name="katha">Katha</string>
    <string name="squarelink">Square Link</string>
    <string name="oblong_Input">Give the lengths and widths</string>
    <string name="oblong_Hight1">Length 01</string>
    <string name="oblong_Hight2">Length 02</string>
    <string name="oblong_Width1">Width 01</string>
    <string name="oblong_Width2">Width 02</string>
    <string name="side_Input">Give the Side</string>
    <string name="side">Side</string>
    <string name="circle_rules">Area of Circle = 𝝅r^2</string>
    <string name="square_rules">Area of square = length x length</string>
    <string name="parellelogram_Input">Area of parallelogram = area x height</string>
    <string name="parellelogram_land">area</string>
    <string name="parellelogram_hight">height</string>
    <string name="compass">Compass</string>
    <string name="sensor_status">Sensor status</string>
    <string name="lock_screen_rotation">Lock screen rotation</string>
    <string name="compass_rose_image_description">Compass rose showing to north</string>
    <string name="device_heading_indicator_image_description">Indicates in which direction the device is pointing</string>
    <string name="cardinal_direction_north">North</string>
    <string name="cardinal_direction_northeast">Northeast</string>
    <string name="cardinal_direction_east">East</string>
    <string name="cardinal_direction_southeast">Southeast</string>
    <string name="cardinal_direction_south">South</string>
    <string name="cardinal_direction_southwest">Southwest</string>
    <string name="cardinal_direction_west">West</string>
    <string name="cardinal_direction_northwest">Northwest</string>
    <string name="cardinal_direction_north_abbreviation">N</string>
    <string name="cardinal_direction_east_abbreviation">E</string>
    <string name="cardinal_direction_south_abbreviation">S</string>
    <string name="cardinal_direction_west_abbreviation">W</string>
    <string name="sensor_accuracy_no_contact">Sensor not available</string>
    <string name="sensor_accuracy_unreliable">Sensor values are unreliable</string>
    <string name="sensor_accuracy_low">Low accuracy</string>
    <string name="sensor_accuracy_medium">Average accuracy</string>
    <string name="sensor_accuracy_high">Maximum accuracy</string>
    <string name="sensor_error_message">Sensor not available</string>
    <string name="sensor_calibration_text">You can try to improve your sensor accuracy at any time by rotating the device in a figure 8 pattern.</string>
    <string name="location_loading">Waiting for location update</string>
    <string name="location_error_message">Location not available</string>
    <string name="location_not_present">Location could not be determined. Falling back to magnetic north.</string>
    <string name="location_reload">Reload location</string>
    <string name="access_location_permission_rationale_title">We need permission to access your location</string>
    <string name="access_location_permission_rationale_message">For showing to true north, this app needs to determine the magnetic declination based on your current location.</string>
    <string name="access_location_permission_denied">Missing permission to access location. Falling back to magnetic north.</string>
    <string name="true_north">True North</string>
    <string name="true_north_summary">Correct the magnetic declination and show to true north. Requires access to your location.</string>
    <string name="magnetic_north">Magnetic North</string>
    <string name="haptic_feedback">Haptic feedback</string>
    <string name="haptic_feedback_summary">The compass vibrates when the direction changes.</string>
    <string name="display">Display</string>
    <string name="night_mode">Theme</string>
    <string name="night_mode_follow_system">Follow system</string>
    <string name="night_mode_no">Light</string>
    <string name="night_mode_yes">Dark</string>
    <string name="about">About</string>
    <string name="author">Author</string>
    <string name="license">License</string>
    <string name="third_party_licenses">Third-party licenses</string>
    <string name="third_party_licenses_summary">Licenses of included open source libraries</string>
    <string name="source_code">Source code</string>
    <string name="version">Version</string>
    <string name="error_message">An error occurred.\nMessage: %1$s\nCode: %2$s</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="no_thanks">No thanks</string>
    <string name="source_code_name" translatable="false">GitHub</string>
    <string name="license_name" translatable="false">GNU GPLv3</string>
    <string name="author_name" translatable="false">Atikur Rahman</string>
    <string name="zero_degrees" translatable="false">0°</string>
    <string name="degrees" translatable="false">%1$d°</string>
    <string name="degree_0_text" translatable="false">0</string>
    <string name="degree_30_text" translatable="false">30</string>
    <string name="degree_60_text" translatable="false">60</string>
    <string name="degree_90_text" translatable="false">90</string>
    <string name="degree_120_text" translatable="false">120</string>
    <string name="degree_150_text" translatable="false">150</string>
    <string name="degree_180_text" translatable="false">180</string>
    <string name="degree_210_text" translatable="false">210</string>
    <string name="degree_240_text" translatable="false">240</string>
    <string name="degree_270_text" translatable="false">270</string>
    <string name="degree_300_text" translatable="false">300</string>
    <string name="degree_330_text" translatable="false">330</string>
    <string name="camera">Camera</string>
    <string name="about1">This application is created and designed for easily Land calculations and others important things.This is Beta Version. Mathematical formulas are collect from internet.  Lot of issues and problem will solve next update version.</string>
    <string name="about2">And this is under developing..</string>
    <string name="stopwatch">Stop Watch</string>
    <string name="recorder">Recorder</string>
    <string name="counter">Counter</string>
    <string name="paint">Paint</string>
    <string name="form">Form</string>
    <string name="map">Map</string>
    <string name="uconverter">Unit Converter</string>
    <string name="area">Area</string>
    <string name="datastor">Data Storage</string>
    <string name="length">Length</string>
    <string name="mass">Mass</string>
    <string name="speed">Speed</string>
    <string name="temperature">Temperature</string>
    <string name="time">Time</string>
    <string name="volume">Volume</string>
    <string name="note">Note Book</string>
    <string name="ana_rot">Vori Ana Rotti</string>
    <string name="gramtt">Gram</string>
    <string name="ana_roti">Vori Ana Rotti Calculation</string>
    <string name="gramt">Gram Calculation</string>
    <string name="round">Round Timber</string>
    <string name="sized">Sized Timber</string>
    <string name="prize">Prize Per CFT: </string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="price">Price</string>
    <string name="cft">CFT : </string>
    <string name="thickness">Thickness</string>
    <string name="ppk">Price of rod per kilogram</string>
    <string name="moato">Total Weight </string>
    <string name="moatp">Total Quantity </string>
    <string name="moatt">Total Price </string>
    <string name="zero_zerotaka">00</string>
    <string name="taka"> </string>
    <string name="kg">Kilogram</string>
    <string name="_0piece">0 Quantity</string>
    <string name="_00">00</string>
    <string name="kilogram00">00 Kilogram</string>
    <string name="piece00">00 Piece</string>
    <string name="piece">Piece</string>
    <string name="quntity">Quantity</string>
    <string name="size">Size</string>
    <string name="weight">Weight</string>
    <string name="mm8">8 mm</string>
    <string name="mm10">10 mm</string>
    <string name="mm12">12 mm</string>
    <string name="mm16">16 mm</string>
    <string name="mm20">20 mm</string>
    <string name="mm25">25 mm</string>
    <string name="input">Please input all field.</string>
    <string name="kg2pic">Kg - Piece</string>
    <string name="pic2kg">Piece - Kg</string>
    <string name="_0">0</string>
    <string name="proti_borir_dam">Price Per Vori</string>
    <string name="proti_gramer_dam">Price Per Gram</string>
    <string name="proti_vhorir_mojuri">Making Charge of Vori</string>
    <string name="goldwit">Gold Weight</string>
    <string name="gram">Gram</string>
    <string name="or">Or</string>
    <string name="zero_vhori_ana_roti_point">0 Vori, 0 Ana, 0 Rati, 0 Point</string>
    <string name="moat_equal">Total =</string>
    <string name="_0_0000vhori">0.0000 vori</string>
    <string name="_0_00_gram">0.00 Gram</string>
    <string name="point">Point</string>
    <string name="roti">Roti</string>
    <string name="vhori">Vori</string>
    <string name="ana">Ana</string>
    <string name="bdlandpage">Standard units of land measurement in Bangladesh</string>
    <string name="bdlandpages">Land Measurement and Units</string>
    <string name="title_heirs">Select Heirs</string>
    <string name="title_assets">Estate Assets</string>
    <string name="lbl_husband">Husband</string>
    <string name="lbl_wife">Wives</string>
    <string name="lbl_father">Father</string>
    <string name="lbl_mother">Mother</string>
    <string name="lbl_sons">Sons</string>
    <string name="lbl_daughters">Daughters</string>
    <string name="hint_land">Land (Shatansh)</string>
    <string name="hint_gold">Gold (Bhori)</string>
    <string name="hint_silver">Silver (Bhori)</string>
    <string name="hint_cash">Cash (Taka)</string>
    <string name="btn_calculate">Calculate Distribution</string>
    <string name="btn_export_pdf">Export to PDF</string>
    <string name="btn_lang_toggle">বাংলা</string>
</resources>