<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".land.UnitChangeActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        app:titleTextColor="@color/white"
        app:title="@string/uchange"
        android:background="@color/myperple"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/bdlandId"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:backgroundTint="@color/myperple"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/button_sarea" />

            <ImageButton
                android:id="@+id/bdUnitcId"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:backgroundTint="@color/myperple"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/button_storages" />
        </LinearLayout>
        <LinearLayout
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/webview1Id"
                android:text="@string/bdlandpage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/webview2Id"
                android:text="@string/bdlandpages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>



    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>