<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GoldActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        app:titleTextColor="@color/white"
        app:title="@string/title_gold"
        android:background="@color/myperple"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:layout_marginTop="?actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:rowCount="4"
                android:columnCount="2"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal"
                android:columnOrderPreserved="false">

                <androidx.cardview.widget.CardView
                    android:layout_height="150dp"
                    android:layout_width="150dp"
                    app:cardCornerRadius="15dp"
                    app:cardBackgroundColor="@color/goldColor"
                    app:cardElevation="5dp"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="30dp">
                    <LinearLayout
                        android:id="@+id/oblongId"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/gold_01"
                            android:layout_gravity="center_horizontal"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/oblong"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:gravity="center"
                            />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_height="150dp"
                    android:layout_width="150dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="5dp"
                    app:cardBackgroundColor="@color/goldColor"
                    android:layout_margin="10dp"
                    android:layout_marginRight="30dp">
                    <LinearLayout
                        android:id="@+id/squareId"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/gold_02"
                            android:layout_gravity="center_horizontal"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/square"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:gravity="center"
                            />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>






            </GridLayout>





        </LinearLayout>





    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>